plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'kr.co.teambrain.marvelrun'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'kr.co.teambrain.marvelrun:marvelrun-common-entity:1.0.0'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test' // JPA, Webmvc 테스트 기능 포함
	testImplementation 'org.springframework.security:spring-security-test' // Security 테스트 전용 (boot-starter 아님!)
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'

	// thymeleaf를 기반으로 html -> pdf로 변환하여 제공하기위한 타임리프 및 관련 라이브러리 기입
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'io.github.openhtmltopdf:openhtmltopdf-pdfbox:1.1.30'
	implementation 'io.github.openhtmltopdf:openhtmltopdf-svg-support:1.1.30'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// redis 사용과 내부 저장데이터의 직렬화를 위한 jackson
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'com.fasterxml.jackson.core:jackson-databind'

	// redis 저장 시 자바의 instant 등의 자료형을 잭슨에서 직렬화 하기위한 jsr310 추가
	//Instant createdAt/expiresAt이 ISO-8601 문자열로 Redis에 저장 및 읽을때도 정상복원
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	// Ncp 측 outbound mailer에 메일 발송 HTTP 요청을 전달하기위한 webclient 사용
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
}

/*
 * 일반 테스트.
 *
 * 특정 테스트 DB의 기존 데이터에 의존하는 정책 검증과
 * 실제 DB 상태를 변경하는 수동 결제 검증은 제외한다.
 * build/check에서는 이 일반 테스트만 실행한다.
 */
tasks.named('test', Test) {
	useJUnitPlatform {
		excludeTags 'policy-db', 'payment-db', 'capacity-db'
	}
}
/*
 * 기존 테스트 DB의 신청 정책을 검증하는 수동 실행용 작업.
 *
 * 실행 명령: .\gradlew.bat policyDbTest
 *
 * build/check의 의존 작업으로 연결하지 않는다.
 * DB 접속정보는 실행 환경의 MARVELRUN_TEST_DB_* 변수를 사용한다.
 */
tasks.register('policyDbTest', Test) {
	group = 'verification'
	description = '기존 테스트 DB의 참가신청 정책을 검증합니다.'

	dependsOn tasks.named('testClasses')

	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath

	useJUnitPlatform {
		includeTags 'policy-db'
	}

	/*
     * 외부 DB의 데이터 변경은 Gradle 입력 파일에 반영되지 않는다.
     * 이전 성공 결과를 재사용하지 않고 명시적 실행마다 검증한다.
     */
	outputs.upToDateWhen { false }
	outputs.cacheIf { false }
}

/*
 * 정원·예약 MVP의 실제 DB 테스트를 명시적으로 실행한다.
 *
 * 일반 build/check에는 연결하지 않는다.
 * 외부 DB 상태가 달라질 수 있으므로 실행 결과를 재사용하지 않는다.
 */
tasks.register('capacityDbTest', Test) {
	group = 'verification'
	description = '정원·예약 MVP의 DB 동작을 검증합니다.'

	dependsOn tasks.named('testClasses')

	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath

	useJUnitPlatform {
		includeTags 'capacity-db'
	}

	maxParallelForks = 1

	outputs.upToDateWhen { false }
	outputs.cacheIf { false }
}

tasks.named('bootJar') {
	archiveFileName = 'user-app.jar'
}
